[gd_scene load_steps=4 format=2]

[ext_resource path="res://juego/tests/GuardarCargarTest.gd" type="Script" id=1]
[ext_resource path="res://juego/font/ROBOTECH GP.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 15
font_data = ExtResource( 2 )

[node name="GuardarCargarTest" type="Node"]
script = ExtResource( 1 )

[node name="BotonGuardar" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = -62.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 1 )
text = "Guardar JSON"

[node name="BotonCargar" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 19.0
margin_top = -62.0
margin_right = 124.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 1 )
text = "Cargar JSON"

[node name="BotonGuardarGodot" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.5
margin_top = -5.0
margin_right = 0.5
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Guardar Godot"

[node name="BotonCargarGodot" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 19.5
margin_top = -5.0
margin_right = 124.5
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Cargar Godot"

[node name="BotonBorrar" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.0
margin_top = 62.0
margin_right = 46.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 1 )
text = "Borrar"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -231.0
margin_right = 66.0
margin_bottom = -217.0
custom_fonts/font = SubResource( 1 )
text = "Guardado de Datos"
align = 1
valign = 1

[node name="TextoResultadoJSON" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 140.5
margin_top = -191.0
margin_right = 203.5
margin_bottom = -177.0
custom_fonts/font = SubResource( 1 )
text = "Resultado"

[node name="TextoResultadoTRES" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 140.5
margin_top = -135.0
margin_right = 203.5
margin_bottom = -121.0
custom_fonts/font = SubResource( 1 )
text = "Resultado"

[node name="NombreJSON" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = -201.0
margin_right = 114.0
margin_bottom = -160.0

[node name="NombreTRES" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = -145.0
margin_right = 114.0
margin_bottom = -104.0

[connection signal="pressed" from="BotonGuardar" to="." method="_on_BotonGuardar_pressed"]
[connection signal="pressed" from="BotonCargar" to="." method="_on_ButtonCargar_pressed"]
[connection signal="pressed" from="BotonGuardarGodot" to="." method="_on_BotonGuardarGodot_pressed"]
[connection signal="pressed" from="BotonCargarGodot" to="." method="_on_BotonCargarGodot_pressed"]
[connection signal="pressed" from="BotonBorrar" to="." method="_on_BotonBorrar_pressed"]
